Fix bottom resize handle position to align with browser-win edge

--- a/app/style.css
+++ b/app/style.css
@@ -125,8 +125,8 @@ html, body {
 }
 .resize-handle-y {
   position: absolute;
-  bottom: 0; left: 0;
-  width: 100%; height: 10px;
+  bottom: 17px; left: 0;
+  width: 100%; height: 14px;
   cursor: ns-resize;
   z-index: 10;
 }
